# llama2-clone

./: README.md  inference.py  model.py  pyproject.toml
