[tool.poetry]
name = "llama-clone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
torch = "^2.3.0"
einops = "*"
sentencepiece = "*"
tqdm = "*"
numpy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
